# my-servant

./: .gitignore  README.md  pyproject.toml  setup.sh
models/suzume-llama-3-8b-mul/: Modelfile
src/aituber/: __init__.py  voice_agent.py
src/my_servant/: chat_agent.py  message_log.py  my_servant.py  prompts.py  skill_agent.py  skill_retriiever.py  summarize_agent.py  voice_agent.py
