[project]
name = "my-servant"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sonesuke", email = "iamsonesuke@gmail.com" }
]
dependencies = [
    "voicevox-core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.15.3/voicevox_core-0.15.3+cpu-cp38-abi3-macosx_11_0_arm64.whl",
    "sounddevice>=0.4.6",
    "ollama>=0.1.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_servant"]
